ndb - bug#26913   Dont invalidate LCP of nodes that dont participate in LCP